--- a/cms/package.json
+++ b/cms/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "@strapi/plugin-cloud": "5.36.0",
     "@strapi/plugin-users-permissions": "5.36.0",
+    "@strapi/provider-email-nodemailer": "^5.36.1",
     "@strapi/strapi": "5.36.0",
+    "axios": "^1.13.5",
     "better-sqlite3": "12.4.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
